src/test/BadMain/BadMain.expected
error: BadMain.panda:2:5: method 'main' must be declared '@class'
error: BadMain.panda:6:5: method 'main' must accept either no parameters or one parameter of type 'panda.collections.PrimitiveArray<panda.core.String>'
error: BadMain.panda:10:5: method 'main' may not return a value
3 errors
