src/test/BadMain/BadMain.panda
class BadMain {
    method main() {
    }

    @class
    method main(arg:String) {
    }

    @class
    method main(arg:PrimitiveArray<String>):Int {
    }
}